Misc fixes: make mobile navbar toggler visible on dark, remove page number from filter, page size to dropdown, rename date range "custom" to "other"

--- a/hnstar/app/dark.css
+++ b/hnstar/app/dark.css
@@ -59,3 +59,7 @@ a {
 a:hover {
     color: #9fb7bb;
 }
+
+.navbar-toggler {
+    background-color: #212121;
+}
